# rulesaur

./: README.md  base_form_error.py  lexical_negators.txt  negation.py  pipeline.py  pyproject.toml  subject_with_and.py  task_1.py  task_2.py  task_3.py  utils.py
tests/: base_tester.py  test_task_2.py  test_task_3.py
tests/data/: task_2_test_data.json  task_3_test_data.json
tests/data/cached_predictions/: task_2_cached_predictions.json  task_3_cached_predictions.json
tests/data/raw_data/: task_2_test_data.txt  task_3_test_data.txt
tests/utils/: paths.py
