[tool.poetry]
name = "rulesaur"
version = "0.1.0"
description = "3 GEC tasks"
authors = ["Liz Ershova <lizersh42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
spacy = "^3.1.3"
parameterized = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
